--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <HTML lang="ja-JP"><HEAD>
-<META http-equiv=Content-Type content="text/html; charset=shift_jis">
+<META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META NAME="ROBOTS" CONTENT="NONE">
 <META NAME="ROBOTS" CONTENT="NOINDEX,NOFOLLOW">
 <TITLE>浮羽高校30回生フォトアルバム</TITLE>
